Task-2 [Traffic routing]/1-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: default
spec:
  hosts:
  - "onlineboutique.example.com"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        subset: v2
        host: frontend.default.svc.cluster.local
      weight: 50
    - destination:
        port:
          number: 80
        subset: v1
        host: frontend.default.svc.cluster.local
      weight: 50
